app/globals.css
@import "tailwindcss";

:root {
  --background: #ffffff;
  --foreground: #171717;
  --font-sans: "Inter", sans-serif !important;
}

@media (prefers-color-scheme: dark) {
  :root {
    --background: #0a0a0a;
    --foreground: #ededed;
  }
}

html,
body {
  height: 100%;
  background: transparent;
}

body {
  font-family: var(--font-sans) !important;
  /* background-image: url('/backgrounds/sunset-clouds.jpg'); */
  /* background: rgb(110, 211, 221);
  background: -moz-linear-gradient(180deg, rgba(110, 211, 221, 1) 0%, rgba(27, 133, 175, 1) 100%);
  background: -webkit-linear-gradient(180deg, rgba(110, 211, 221, 1) 0%, rgba(27, 133, 175, 1) 100%);
  background: linear-gradient(180deg, rgba(110, 211, 221, 1) 0%, rgba(27, 133, 175, 1) 100%);
  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#6ed3dd", endColorstr="#1b85af", GradientType=1); */
}

a {
  @apply font-bold opacity-80 hover:opacity-100 underline decoration-dotted hover:no-underline;
}

.container {
  @apply p-5 pt-0 md:rounded-2xl text-sm md:text-base;
  height: 100%;
  max-width: 48rem;
}

.datapoint {
  @apply gap-2 border-b border-white/25 py-3 w-full;
}

.datapoint p span {
  display: block;
}


/* Custom autocomplete dropdown animation */
@keyframes dropdownFadeIn {
  from {
    opacity: 0;
    transform: translateY(-4px);
  }

  to {
    opacity: 1;
    transform: translateY(0);
  }
}

/* hide-scrollbar class */
.hide-scrollbar::-webkit-scrollbar {
  display: none;
}

.hide-scrollbar {
  -ms-overflow-style: none;
  /* IE/Edge */
  scrollbar-width: none;
  /* Firefox */
}

